fix: fix spacing between cards and overflow on mobile devices

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body,
+#__next {
   overflow-x: hidden;
 }
 
